delete old kubectl version

--- a/argocd-plugin/argocd-install/deploykf-plugin/repo-server-patch.yaml
+++ b/argocd-plugin/argocd-install/deploykf-plugin/repo-server-patch.yaml
@@ -11,7 +11,7 @@ spec:
         fsGroup: 999
       initContainers:
         - name: deploykf-plugin-setup--kubectl
-          image: docker.io/bitnami/kubectl:1.26.10
+          image: docker.io/bitnami/kubectl
           command:
             - "/bin/sh"
             - "-c"
