--- a/argocd-plugin/argocd-helm/values.yaml
+++ b/argocd-plugin/argocd-helm/values.yaml
@@ -234,7 +234,7 @@ repoServer:
     ## INIT_CONTAINER: copy `kubectl` binary to volume
     ##
     - name: deploykf-plugin-setup--kubectl
-      image: docker.io/bitnami/kubectl:1.26.10
+      image: docker.io/bitnami/kubectl
       command:
         - "/bin/sh"
         - "-c"
